link_libraries(IrrlichtMt::IrrlichtMt)
add_executable(image_loader_test image_loader_test.cpp)

function(test_image_loader format expected input)
	string(TOLOWER ${format} suffix)
	add_test(NAME ImageLoader${format}-${input} COMMAND image_loader_test ${expected} data/sample_${input}.${suffix} WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
endfunction()

test_image_loader(BMP 16color-16bpp 4bpp_v3)
# test_image_loader(BMP 16color-16bpp 4bpp_v7)
# test_image_loader(BMP 16color-16bpp 4bpp_v3_rle)
# test_image_loader(BMP 16color-16bpp 4bpp_v7_rle)
test_image_loader(BMP 30color-16bpp 8bpp_v3)
# test_image_loader(BMP 30color-16bpp 8bpp_v7)
test_image_loader(BMP 30color-16bpp 8bpp_v3_rle)
# test_image_loader(BMP 30color-16bpp 8bpp_v7_rle)
# test_image_loader(BMP 30color-16bpp 16bpp_v3)
# test_image_loader(BMP 30color-16bpp 16bpp_v7)
test_image_loader(BMP 30color-24bpp 24bpp_v3)
test_image_loader(BMP 30color-24bpp 24bpp_v7)

test_image_loader(PNG 30color-24bpp 8bpp)
test_image_loader(PNG 30color-24bpp 24bpp)

test_image_loader(TGA 30color-32bpp 8bpp_up)
test_image_loader(TGA 30color-32bpp 8bpp_down)
# test_image_loader(TGA 30color-16bpp 8bpp_rle_up)
# test_image_loader(TGA 30color-16bpp 8bpp_rle_down)
test_image_loader(TGA 30color-24bpp 24bpp_up)
test_image_loader(TGA 30color-24bpp 24bpp_down)
test_image_loader(TGA 30color-24bpp 24bpp_rle_up)
test_image_loader(TGA 30color-24bpp 24bpp_rle_down)
